syntax = "proto3";

package semio.extender.converter.v1;

option go_package = "github.com/usalu/semio/src/packages/go/extender/converter/v1";
option csharp_namespace = "Semio.Extender.Converter.V1";

import "model/v1/model.proto";

// â›ª Converter (cnv/Cv) service converts a representation from one language into another language.
service ConverterService {
  rpc ConvertRepresentation(RepresentationConversionRequest) returns (semio.model.v1.Representation);
}

// Description what a converter is converting.
message Converting{
  semio.model.v1.Language src_lng = 1;
  semio.model.v1.Language trg_lng = 2;
}

// Request for converting a representation.
message RepresentationConversionRequest {
  semio.model.v1.Representation rep = 1;
  semio.model.v1.Language trg_lng = 2;
}